fix loading status

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="game-name">Word Master</h1>
     </header>
 
-    <div class="wait-bar hidden">
+    <div class="wait-bar show">
         <div class="spiral">🌀</div>
     </div>
 
@@ -44,7 +44,7 @@
         <div class="scoreboard-letter" id="letter-25"></div>
 
     </div>
-    
-    <script src="word-masters.js"></script>
+
+    <script src="./word-masters.js"></script>
 </body>
 </html>
