add scoreboard letters

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <div class="scoreboard-letter" id="letter-23"></div>
         <div class="scoreboard-letter" id="letter-24"></div>
         <div class="scoreboard-letter" id="letter-25"></div>
+        <div class="scoreboard-letter" id="letter-26"></div>
+        <div class="scoreboard-letter" id="letter-27"></div>
+        <div class="scoreboard-letter" id="letter-28"></div>
+        <div class="scoreboard-letter" id="letter-29"></div>
+        <div class="scoreboard-letter" id="letter-30"></div>
 
     </div>
 
