add how to play button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header class="navbar">
         <h1 class="game-name">Word Master</h1>
+        <div class="nav-btns">
+            <button class="btn" id="howToPlayBtn">?</button>
     </header>
 
     <div class="wait-bar show">
