add virtual keyboard

--- a/index.html
+++ b/index.html
@@ -91,6 +91,48 @@
 
     </div>
 
+    <div class="virtual-keyboard">
+        <div class="row row1">
+            <div class="key" id="key-q">Q</div>
+            <div class="key" id="key-w">W</div>
+            <div class="key" id="key-e">E</div>
+            <div class="key" id="key-r">R</div>
+            <div class="key" id="key-t">T</div>
+            <div class="key" id="key-y">Y</div>
+            <div class="key" id="key-u">U</div>
+            <div class="key" id="key-i">I</div>
+            <div class="key" id="key-o">O</div>
+            <div class="key" id="key-p">P</div>
+        </div>
+
+
+        <div class="row row2">
+            <div class="key" id="key-a">A</div>
+            <div class="key" id="key-s">S</div>
+            <div class="key" id="key-d">D</div>
+            <div class="key" id="key-f">F</div>
+            <div class="key" id="key-g">G</div>
+            <div class="key" id="key-h">H</div>
+            <div class="key" id="key-j">J</div>
+            <div class="key" id="key-k">K</div>
+            <div class="key" id="key-l">L</div>
+        </div>
+
+
+        <div class="row row3">
+            <div class="key" id="key-enter">ENTER</div>
+            <div class="key" id="key-z">Z</div>
+            <div class="key" id="key-x">X</div>
+            <div class="key" id="key-c">C</div>
+            <div class="key" id="key-v">V</div>
+            <div class="key" id="key-b">B</div>
+            <div class="key" id="key-n">N</div>
+            <div class="key" id="key-m">M</div>
+            <div class="key" id="key-delete">DELETE</div>
+        </div>
+
+    </div>
+
     <script src="./word-masters.js"></script>
 </body>
 </html>
