edit row classes for keyboard

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <div class="virtual-keyboard">
-        <div class="row row1">
+        <div class="row">
             <div class="key" id="key-q">Q</div>
             <div class="key" id="key-w">W</div>
             <div class="key" id="key-e">E</div>
@@ -106,7 +106,7 @@
         </div>
 
 
-        <div class="row row2">
+        <div class="row">
             <div class="key" id="key-a">A</div>
             <div class="key" id="key-s">S</div>
             <div class="key" id="key-d">D</div>
@@ -119,7 +119,7 @@
         </div>
 
 
-        <div class="row row3">
+        <div class="row">
             <div class="key" id="key-enter">ENTER</div>
             <div class="key" id="key-z">Z</div>
             <div class="key" id="key-x">X</div>
