fix mobile design

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header class="navbar">
+        <div></div>
         <h1 class="game-name">Word Master</h1>
         <div class="nav-btns">
             <button class="btn" id="howToPlayBtn">?</button>
+        </div>
     </header>
 
     <div class="wait-bar show">
